--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
   "name": "slider-dmtk",
   "version": "1.0.0",
   "description": "Responsive carousel image gallery",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "files": [
     "dist/"
   ],
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production",
-    "test": "npm run test",
+    "test": "jest",
     "lint": "eslint . --ext .ts"
   },
   "author": "jrltt",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.21.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.3",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
     "webpack": "^5.24.3",
