--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^5.1.1",
+    "dotenv": "^8.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "slider-dmtk": "file:../slider-dmtk-1.0.0.tgz"
+    "slider-dmtk": "file:../slider-dmtk-1.0.0.tgz",
+    "unsplash-js": "^7.0.4"
   }
 }
