--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dist/"
   ],
   "scripts": {
-    "start": "webpack serve --mode=development",
-    "build": "webpack --mode=production",
+    "start": "cross-env NODE_ENV=development webpack serve --mode=development",
+    "build": "cross-env NODE_ENV=production webpack --mode=production",
     "test": "jest",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .js"
   },
   "author": "jrltt",
   "license": "ISC",
@@ -21,9 +21,15 @@
     "@babel/preset-env": "^7.13.9",
     "@types/jest": "^26.0.20",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
