--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^5.1.1",
