--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --mode=development",
     "build": "cross-env NODE_ENV=production webpack --mode=production",
+    "build:pack": "npm run build && npm pack",
     "test": "jest",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint ."
   },
   "author": "jrltt",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
