--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "cross-env NODE_ENV=production webpack",
+    "serve:build": "npm run build && npx http-serve dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
